--- a/.k8s/mongodb-nats-connector.yml
+++ b/.k8s/mongodb-nats-connector.yml
@@ -13,6 +13,10 @@ spec:
                 app: mongodb-nats-connector
         spec:
             containers:
-                -   name: mongodb-nats-connector
-                    image: mongodb-nats-connector
-
+                - name: mongodb-nats-connector
+                  image: mongodb-nats-connector
+                  env:
+                      - name: NATS_SERVER_URL
+                        value: "nats://nats:4222"
+                      - name: NATS_CLUSTER_SIZE
+                        value: "3"
