--- a/.k8s/nats.yml
+++ b/.k8s/nats.yml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
     name: nats
 spec:
-    serviceName: nats-1
+    serviceName: nats
     replicas: 1
     selector:
         matchLabels:
@@ -15,16 +15,16 @@ spec:
                 selector: nats
         spec:
             containers:
-                -   name: nats
-                    image: nats
-                    ports:
-                        -   containerPort: 4222
-                    args: [ "--js" ]
-                    readinessProbe:
-                        tcpSocket:
-                            port: 4222
-                        initialDelaySeconds: 5
-                        periodSeconds: 30
+                - name: nats
+                  image: nats
+                  ports:
+                      - containerPort: 4222
+                  args: ["--js"]
+                  readinessProbe:
+                      tcpSocket:
+                          port: 4222
+                      initialDelaySeconds: 5
+                      periodSeconds: 30
 ---
 apiVersion: v1
 kind: Service
@@ -37,7 +37,7 @@ spec:
     selector:
         app: nats
     ports:
-        -   protocol: TCP
-            port: 4222
-            targetPort: 4222
-            name: nats-port
+        - protocol: TCP
+          port: 4222
+          targetPort: 4222
+          name: nats-port
