--- a/.k8s/mongodb-nats-connector.yml
+++ b/.k8s/mongodb-nats-connector.yml
@@ -12,6 +12,7 @@ spec:
             labels:
                 app: mongodb-nats-connector
         spec:
+            terminationGracePeriodSeconds: 5
             containers:
                 - name: mongodb-nats-connector
                   image: mongodb-nats-connector
