--- a/.k8s/mongodb-nats-connector.yml
+++ b/.k8s/mongodb-nats-connector.yml
@@ -1,23 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: mongodb-nats-connector
+  name: mongodb-nats-connector
 spec:
-    replicas: 3
-    selector:
-        matchLabels:
-            app: mongodb-nats-connector
-    template:
-        metadata:
-            labels:
-                app: mongodb-nats-connector
-        spec:
-            terminationGracePeriodSeconds: 5
-            containers:
-                - name: mongodb-nats-connector
-                  image: mongodb-nats-connector
-                  env:
-                      - name: NATS_SERVER_URL
-                        value: "nats://nats:4222"
-                      - name: NATS_CLUSTER_SIZE
-                        value: "3"
+  replicas: 3
+  selector:
+    matchLabels:
+      app: mongodb-nats-connector
+  template:
+    metadata:
+      labels:
+        app: mongodb-nats-connector
+    spec:
+      terminationGracePeriodSeconds: 5
+      containers:
+        - name: mongodb-nats-connector
+          image: mongodb-nats-connector
+          env:
+            - name: MONGO_SERVER_URI
+              value: "mongodb://mongodb:27017/platform?replicaSet=tilt&directConnection=true"
+            - name: MONGO_WATCH_COLLECTIONS
+              value: "users,movies"
+            - name: NATS_SERVER_URL
+              value: "nats://nats:4222"
