--- a/.k8s/mongodb-nats-connector.yml
+++ b/.k8s/mongodb-nats-connector.yml
@@ -17,8 +17,10 @@ spec:
         - name: mongodb-nats-connector
           image: mongodb-nats-connector
           env:
-            - name: MONGO_SERVER_URI
+            - name: MONGO_URI
               value: "mongodb://mongodb:27017/platform?replicaSet=tilt&directConnection=true"
+            - name: MONGO_WATCH_DATABASE
+              value: "test"
             - name: MONGO_WATCH_COLLECTIONS
               value: "users,movies"
             - name: NATS_SERVER_URL
