--- a/.k8s/mongodb-nats-connector.yml
+++ b/.k8s/mongodb-nats-connector.yml
@@ -16,6 +16,8 @@ spec:
       containers:
         - name: mongodb-nats-connector
           image: mongodb-nats-connector
+          ports:
+            - containerPort: 3000
           env:
             - name: MONGO_URI
               value: "mongodb://mongodb:27017/test?replicaSet=tilt&directConnection=true"
@@ -23,3 +25,25 @@ spec:
               value: "users,movies"
             - name: NATS_SERVER_URL
               value: "nats://nats:4222"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 3
+            periodSeconds: 3
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-nats-connector
+  labels:
+    app: mongodb-nats-connector
+spec:
+  clusterIP: None
+  selector:
+    app: mongodb-nats-connector
+  ports:
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
+      name: mongodb-nats-connector-port
